# zed-regex-linter-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  compilem.sh  extension.toml  version_bump.sh
.forgejo/workflows/: ci.yml  renovate.yml  stale.yml
.github/workflows/: ci.yml  release.yml
lsp-server/: Cargo.toml  compilem.sh
lsp-server/src/: main.rs
lsp-server/src/linter/: annotations.rs  mod.rs
src/: extension.rs
