[package]
name = "regex-linter-lsp-server"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "regex-linter-lsp-server"

[dependencies]
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20"
